# benchmark

./: .env.example  .envrc  .gitignore  Makefile  README.md  compose.cloud.yaml  compose.yaml  devenv.nix  devenv.yaml  flake.nix
backend/: 10-gen-bodies.sh  README.md  nginx.conf  nginx.conf.template
cloud/: cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
k6/: ramp.js  saturate.js
loadgen/: run-k6.sh  run-wrk2.sh  scenario.js  self_check.sh
loadgen/vegeta-ramp/: README.md  go.mod  go.sum  main.go
loadgen/zrk/: README.md  build.sh  run.py
metrics/: prometheus.yml.tmpl  snapshot.sh
monitoring/: prometheus.yml
nix/: backend.nix  envoy.nix  host.nix  metrics.nix  proxies.nix  tls.nix
proxies/caddy/: Caddyfile  Caddyfile.tmpl  Dockerfile
proxies/envoy/: envoy.yaml  envoy.yaml.tmpl
proxies/haproxy/: haproxy.cfg  haproxy.cfg.tmpl
proxies/nginx/: nginx.conf.template
proxies/pingora/: Cargo.toml  Dockerfile
proxies/pingora/src/: main.rs
proxies/traefik/: dynamic.yml  dynamic.yml.tmpl  traefik.yml
proxies/zoxy/: Dockerfile  config.json  config.plain.json.tmpl  config.template.json  config.tls.json.tmpl  config.tmpl.json  entrypoint.sh  seccomp-iouring.json
report/: charts.py  hdr.py  report.py  report_vegeta.py  sweep.py
scenarios/: matrix.yaml
scripts/: build-image.sh  cloud-run.sh  lib.sh  megabox-bench.sh  render-config.sh  report.py  run-all.sh  run.sh  sweep.sh  vegeta-bench.sh  zrk-bench.sh
terraform/: cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+7 files in other folders)
