[package]
name = "pingora-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pingora-http"
path = "src/main.rs"

[dependencies]
# Pingora is a framework, not a proxy — we build the L7 HTTP proxy in main.rs.
# pingora-proxy carries the ProxyHttp trait + http_proxy_service (the HTTP/1.1
# reverse-proxy state machine and upstream connection pool); pingora-core
# carries Server / ServerConf / HttpPeer. Pin the minor here; bump to bench a
# newer Pingora.
pingora-core = "0.5"
pingora-proxy = "0.5"
async-trait = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
